force-app/main/default/objects/Dropbox_File_Request__c/Dropbox_File_Request__c.object-meta.xml
<CustomObject>
    <label>Dropbox File Request</label>
    <nameField>
        <displayFormat>DFR-{0000}</displayFormat>
        <label>Drop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dropbox File Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>