force-app/main/default/objects/Dropbox_File_Request__c/fields/Destination_Folder__c.field-meta.xml
<CustomField>
    <fullName>Destination_Folder__c</fullName>
    <label>Destination Folder</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>