force-app/main/default/objects/Dropbox_File_Request__c/fields/MRM__c.field-meta.xml
<CustomField>
    <fullName>MRM__c</fullName>
    <formula>Opportunity__r.MRM__r.FirstName &amp; &apos; &apos; &amp;  Opportunity__r.MRM__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRM</label>
    <type>Text</type>
</CustomField>