force-app/main/default/objects/Dropbox_File_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Dropbox File Requests</relationshipLabel>
    <relationshipName>Dropbox_File_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>