force-app/main/default/objects/Dropbox_File_Request__c/fields/Request_Url__c.field-meta.xml
<CustomField>
    <fullName>Request_Url__c</fullName>
    <label>Request Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>