force-app/main/default/objects/Dropbox_File_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Request_Url__c</columns>
    <columns>Request_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>